[package]
name = "rust_babel_plugin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
regex = "1.10.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
# Optimize for size in release builds
opt-level = "s"
